# playfair

./: .gitignore  CMakeLists.txt  README.md  coding.c  coding.h  decoding.c  decoding.h  directory.c  directory.h  elab_utils.c  elab_utils.h  elabutils.c  elabutils.h  encoding.c  encoding.h  file.c  file.h  key.c  key.h  keygen.c  keygen.h  main.c  mem_utils.c  mem_utils.h
coding/: playfair.c  playfair.h
file/: directory.c  directory.h  file.c  file.h
key/: key.c  key.h  keygen.c  keygen.h
memory/: mem_utils.c  mem_utils.h
test/: chiave.txt
